--- a/prod/sass/partial/general.scss
+++ b/prod/sass/partial/general.scss
@@ -46,10 +46,15 @@ a {
 }
 .pattern {
 	@include gridle(12);
-	@include background-image(url("../img/pattern.jpg"), url("../img/pattern.jpg"));
+	background:{image:url(#{$urlPath}/bg-pattern-fino2b.svg);color: $second_color;position: left;repeat:repeat;} 
 	padding: 10px;
-	background:{position: left;repeat:repeat;}
 	display: inline-block;
+	background-position: -0% 0;
+	@include transition(background-position 0.5s ease-out);
+	&:hover {
+		background:{image:url(#{$urlPath}/bg-pattern-fino2b.svg);color: $second_color;position: left;repeat:repeat;} 
+		background-position: -99.99% 0;
+	}
 	a {
 		display: inline-block;
 		font:{size:17px;}
@@ -63,7 +68,6 @@ a {
 	background-size: 200.22% auto;
 	-webkit-background-size: 200.22% auto;
 	-moz-background-size: 200.22% auto;
-	background-position: -0% 0;
 	@include transition(background-position 0.5s ease-out);
 	padding:{left:10px;right:5px;}
 	&:hover {
