--- a/prod/sass/partial/vars.scss
+++ b/prod/sass/partial/vars.scss
@@ -10,6 +10,8 @@ $bg-color:#e7e7e7;
 $font-color:#8b91a0;
 $li-border-color:#e5e9ec;
 
+$urlPath:'../../../uploads/2015/06'; 
+
 $primary_font:'Open Sans', sans-serif;
 
 //MEDIA QUERIES
