--- a/prod/sass/partial/header.scss
+++ b/prod/sass/partial/header.scss
@@ -56,7 +56,7 @@
 					}
 					h1 {
 						float: left;
-						margin:{bottom:5px;left:10px;}
+						margin:{bottom:0;left:10px;}
 						text:{transform: uppercase;}
 						@include gridle_state(desktopess) {
 							margin:{left:0;}
