--- a/prod/sass/partial/footer.scss
+++ b/prod/sass/partial/footer.scss
@@ -28,6 +28,9 @@
 		@include gridle_state(notebook-min) {
 			margin:{top: -10px;}
 		}
+		@include gridle_state(tabless-min) {
+			margin:{top:0;}
+		}
 		@include gridle_state(phoness) {
 			padding: 0 !important;
 		} 
