--- a/prod/sass/partial/header.scss
+++ b/prod/sass/partial/header.scss
@@ -35,10 +35,11 @@
 				}
 				@include gridle_state(phoness phoness-min) {
 					padding:0 5px;
-					height: 210px; 
+					height: 300px;
 				}
 				@include gridle_state(phoness-min) {
 					padding:0 7px;
+					height: 210px; 
 				}
 				.content-title {
 					@include gridle(12);
@@ -53,20 +54,12 @@
 					}
 					@include gridle_state(phoness) {
 						padding:{left:0 !important;}
+						bottom:0;
 					}
 					h1 {
 						float: left;
-						margin:{bottom:0;left:10px;}
+						margin:{bottom:0;left:0;}
 						text:{transform: uppercase;}
-						@include gridle_state(desktopess) {
-							margin:{left:0;}
-						}
-						@include gridle_state(tabless-md) {
-							margin:{left:0;}
-						}
-						@include gridle_state(phoness-min) {
-							margin:{left:0;}
-						}
 					}
 					.bajada {
 						@include gridle(9, desktopess notebook-min);
