--- a/prod/sass/partial/nav-colapse.scss
+++ b/prod/sass/partial/nav-colapse.scss
@@ -1,11 +1,12 @@
 .nav-colapse {
+	@extend .no-paddings;
 	height: 100%;
 	position: absolute;
 	background: $first_color;
 	color:$second_color;
 	overflow: scroll;
 	z-index: 999; 
-	@include gridle(2, desktopess notebook-min);
+
 	@include gridle_state(desktopess) {
 		float:left;
 	}
@@ -18,11 +19,11 @@
 	@include gridle_state(notebook-min) {
 		float: left;
 		display:block; 
-	}
-	@include gridle(3, tabless-md tabless-min);
-	@include gridle(9, phoness);
+	} 
 	@include gridle_float(right);
-	@extend .no-paddings;
+	@include gridle(2, desktopess notebook-min tabless-md);
+	@include gridle(4, phoness);
+	@include gridle(8, phoness-min);
 	.contendor-menu {
 		@include gridle(12);
 		@extend .no-paddings;
