--- a/prod/sass/partial/vars.scss
+++ b/prod/sass/partial/vars.scss
@@ -37,7 +37,7 @@ $bp-xxl : 1440px;
 ) );
 
 @include gridle_register_state( tabless-md-portrait, (
-	(min-width : $bp-md)and(max-width: $bp-largess)and(orientation:landscape) 
+	(screen and (min-width : $bp-md) and (max-width: $bp-large)and (orientation : portrait))
 ) );
 
 @include gridle_register_state( tabless-min, (
