--- a/prod/sass/partial/nav-colapse.scss
+++ b/prod/sass/partial/nav-colapse.scss
@@ -211,7 +211,7 @@
 							}
 						}
 						&.fa {
-							color:$second_color;
+							color:$first_color;
 							font:{size: 18px !important;}
 							padding:0 !important;			
 							&:before {
@@ -234,8 +234,8 @@
 						&:hover {
 						 	background: {position: -99.99% 0;}
 							a {
-								color:$second_color;
-								background: {color:$first_color;}
+								color:$first_color;
+								background: {color:$second_color;}
 							} 
 							&.fa{
 								color:$second_color;
