--- a/prod/sass/partial/general.scss
+++ b/prod/sass/partial/general.scss
@@ -362,7 +362,7 @@ a {
 		opacity: 1;
 	}
 }
-#content-pattern{
+.content-pattern{
 	width:100%;
 	position:absolute;
 	left:0;
@@ -376,10 +376,6 @@ a {
 			fill:#000;
 		}
 	}
-	#pattern-apply{
-		width:100%;
-		height:100%;
-	}
 	#lines-pattern2{
 		width:100%;
 		height:100%;
@@ -387,7 +383,19 @@ a {
 			fill:#fff;
 		}
 	}
+	#pattern-apply{
+		width:100%;
+		height:100%;
+	}
 	#pattern-apply2{
+		width:100%;
+		height:100%;
+	}
+	#pattern-apply3{
+		width:100%;
+		height:100%;
+	}
+	#pattern-apply4{
 		width:100%;
 		height:100%;
 	}
