--- a/prod/sass/partial/general.scss
+++ b/prod/sass/partial/general.scss
@@ -362,33 +362,26 @@ a {
 		opacity: 1;
 	}
 }
-#content-pattern{
-	width:100%;
-	position:absolute;
-	left:0;
-	top:0;
+.trama{
+	svg{
+		.lines-pattern{
+			width:100%;
+			height:100%;
+		}
+		.pattern-apply{
+			width:100%;
+			height:100%;
+		}
+	}
 }
-#pattern-lines{
-	#lines-pattern{
-		width:100%;
-		height:100%;
-		.pattern-lines{
-			fill:#fff;
-		}
+@keyframes tramaFadea{
+	0%{
+		fill:#000;
 	}
-	#lines-pattern2{
-		width:100%;
-		height:100%;
-		.pattern-lines2{
-			fill:#000;
-		}
+	100%{
+		fill:#fff;
 	}
-	#pattern-apply{
-		width:100%;
-		height:100%;
-	}
-	#pattern-apply2{
-		width:100%;
-		height:100%;
-	}
+}
+#tramaAnimaa{
+	@include animation(tramaFadea 0.4s ease forwards);
 }
