--- a/prod/sass/partial/page-categoria.scss
+++ b/prod/sass/partial/page-categoria.scss
@@ -112,14 +112,16 @@
 						}
 					}
 					.content-single{
-						.pattern{
-							@include transition(background-position 0.5s ease-out);
-							background-position: 99.99% 0 !important;
-							.trama{
-								svg{
-									pattern{
-										polygon{
-											@include animation(tramaFadea 0.4s ease forwards);
+						a{
+							.pattern{
+								@include transition(background-position 0.5s ease-out);
+								background-position: 99.99% 0 !important;
+								.trama{
+									svg{
+										pattern{
+											polygon{
+												@include animation(tramaFadea 0.4s ease forwards);
+											}
 										}
 									}
 								}
