--- a/prod/sass/partial/footer.scss
+++ b/prod/sass/partial/footer.scss
@@ -118,7 +118,6 @@
 						@extend .no-paddings;
 						list-style: none;
 						border-radius: 50%;
-						display: table;
 						width: 25px;
 						height: 25px;
 						margin:{bottom: 5px;}
@@ -133,8 +132,13 @@
 						a {
 							text:{align:center;}
 							color:$first_color;
-							display: table-cell;
-							vertical-align: middle;
+							display: table;
+							width:100%;
+							height:100%;
+							i{
+								display: table-cell;
+								vertical-align: middle;
+							}
 						}
 					}
 				}
